# openneon

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  metric-registry.yaml
.github/workflows/: metric-registry-check.yml  usr-naming-guard.yml
compute_tools/: policy.yaml.example
compute_tools/src/: audit_otel.rs  compute.rs  config.rs  lib.rs  logger.rs  warming_up.rs
compute_tools/tests/: warming_up_fixtures.rs
docs/: METRIC-REGISTRY.md  audit-otel-schema.md  usr-naming-migration.md
docs/agents/: domain.md  test-infra.md
libs/tracing-utils/: Cargo.toml
libs/utils/: Cargo.toml
pageserver/: Cargo.toml
pageserver/src/: lib.rs  metrics.rs  page_service.rs  usr.rs
pgxn/neon/: .gitignore  Makefile  communicator.c  file_cache.c  file_cache.h  jsonlog_ext.c  jsonlog_ext.h  libpagestore.c  neon--1.10--1.9.sql  neon--1.6--1.7.sql  neon--1.7--1.6.sql  neon--1.7--1.8.sql  neon--1.8--1.7.sql  neon--1.8--1.9.sql  neon--1.9--1.10.sql  neon--1.9--1.8.sql  neon.c  neon.control  neon_perf_counters.c  neon_perf_counters.h  neon_trace_status.c  neon_trace_status.h  pagestore_client.h  sqlcommenter.c  sqlcommenter.h  trace_context.c  trace_context.h  walproposer.c  walproposer.h  walproposer_pg.c
pgxn/neon/probes/rust/: Cargo.toml
pgxn/neon/probes/rust/src/: lib.rs
proxy/: Cargo.toml
proxy/src/: lib.rs  logging.rs  trace_context.rs
safekeeper/: Cargo.toml
safekeeper/src/: handler.rs  lib.rs  metrics.rs  receive_wal.rs  recovery.rs  safekeeper.rs  shard_map_cache.rs
scripts/: check-metric-registry.sh  usr_naming_guard.sh  validate_whitelist.py
(+61 files in other folders)
